# stm32_mesonbuild

./: .gitignore  README  README.md  code_example.ioc  meson.build  meson_options.txt
Core/: meson.build
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
stm32-meson/: meson.build  meson_options.txt  script.ld.in  stm32h5.build
